--- a/spotiwood.api/test/Spotiwood.Api.SearchDetails.UnitTests/Spotiwood.Api.SearchDetails.UnitTests.csproj
+++ b/spotiwood.api/test/Spotiwood.Api.SearchDetails.UnitTests/Spotiwood.Api.SearchDetails.UnitTests.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
+
   <ItemGroup>
     <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
   </ItemGroup>
-  
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -15,6 +16,7 @@
     <PackageReference Include="AutoFixture.Idioms" Version="4.17.0" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="Moq.Contrib.HttpClient" Version="1.4.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -29,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Spotiwood.Framework\Spotiwood.Framework.csproj" />
+    <ProjectReference Include="..\..\src\Spotiwood.Api.SearchDetails\Spotiwood.Api.SearchDetails.csproj" />
     <ProjectReference Include="..\Spotiwood.UnitTests.Common\Spotiwood.UnitTests.Common.csproj" />
   </ItemGroup>
 
