--- a/spotiwood.api/src/Spotiwood.Api.Fns.SearchDetails/Spotiwood.Api.Fns.SearchDetails.csproj
+++ b/spotiwood.api/src/Spotiwood.Api.Fns.SearchDetails/Spotiwood.Api.Fns.SearchDetails.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Spotiwood.Api.Search\Spotiwood.Api.Search.csproj" />
+    <ProjectReference Include="..\Spotiwood.Framework.Authentication\Spotiwood.Framework.Authentication.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
