--- a/spotiwood.api/src/Spotiwood.Api.Fns.PlaylistDetails/Properties/launchSettings.json
+++ b/spotiwood.api/src/Spotiwood.Api.Fns.PlaylistDetails/Properties/launchSettings.json
@@ -2,8 +2,13 @@
   "profiles": {
     "Spotiwood.Api.Fns.PlaylistDetails": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7073",
-      "launchBrowser": false
+      "commandLineArgs": "--port 7073"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "httpPort": 7073,
+      "useSSL": false
     }
   }
 }
