N22 setup initial ui project with authentication

--- a/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/Spotiwood.UI.App.csproj
+++ b/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/Spotiwood.UI.App.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Spotiwood.Framework.Authentication\Spotiwood.Framework.Authentication.csproj" />
+    <ProjectReference Include="..\Spotiwood.Framework.Authentication\Spotiwood.Framework.Authentication.csproj" />
   </ItemGroup>
 
 </Project>
