--- a/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/wwwroot/appsettings.json
+++ b/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/wwwroot/appsettings.json
@@ -2,7 +2,8 @@
   "Authentication": {
     "Authority": "https://spotiwood.eu.auth0.com",
     "Audience": "spotiwood.api",
-    "ClientId": "7kZeYTXnJUXIiCI215bpkZ2p7qBgGCek"
+    "ClientId": "7kZeYTXnJUXIiCI215bpkZ2p7qBgGCek",
+    "ApiRoot": "http://localhost:7070"
   },
   "Api": {
     "BaseUri": "http://localhost:7070"
