--- a/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/Spotiwood.UI.App.csproj
+++ b/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.App/Spotiwood.UI.App.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Spotiwood.Framework.Authentication\Spotiwood.Framework.Authentication.csproj" />
+    <ProjectReference Include="..\..\..\Spotiwood.Framework.Messaging\Spotiwood.Framework.Messaging.csproj" />
+    <ProjectReference Include="..\Spotiwood.Framework.Api\Spotiwood.Framework.Api.csproj" />
     <ProjectReference Include="..\Spotiwood.UI.Components\Spotiwood.UI.Components.csproj" />
   </ItemGroup>
 
