--- a/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.Components/Spotiwood.UI.Components.csproj
+++ b/spotiwood.ui/Spotiwood.UI/src/Spotiwood.UI.Components/Spotiwood.UI.Components.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Spotiwood.Framework.Api\Spotiwood.Framework.Api.csproj" />
+  </ItemGroup>
+
 </Project>
