N17 add api project for exporting p1

--- a/spotiwood.api/docker-compose.override.yml
+++ b/spotiwood.api/docker-compose.override.yml
@@ -1,6 +1,10 @@
 version: '3.4'
 
 services:
+  spotiwood.api.fns.playlistexport:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+
   spotiwood.api.fns.playlistdetails:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
