--- a/.github/workflows/soundforest.yml
+++ b/.github/workflows/soundforest.yml
@@ -5,10 +5,10 @@ on:
     - main
 env:
   AZURE_FUNCTIONAPP_NAME: soundforest
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: src/SoundForest.Api/published
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: soundforest.be/src/SoundForest.Api/published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 7.0.x
-  WORKING_DIRECTORY: src/SoundForest.Api
+  WORKING_DIRECTORY: soundforest.be/src/SoundForest.Api
   DOTNET_CORE_VERSION_INPROC: 6.0.x
 jobs:
   build:
