--- a/soundforest.be/src/SoundForest.Api/SoundForest.Api.csproj
+++ b/soundforest.be/src/SoundForest.Api/SoundForest.Api.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>780d6f05-8e22-4011-8140-a8f1f5930fc5</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
