#80 update plan + fix frontend deploy

--- a/.github/workflows/soundforest-api.yml
+++ b/.github/workflows/soundforest-api.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
     - main
+    paths:
+    - soundforest.be/**
 env:
   AZURE_FUNCTIONAPP_NAME: soundforest
   AZURE_FUNCTIONAPP_PACKAGE_PATH: soundforest.be/src/SoundForest.Api/published
