--- a/soundforest.fe/src/SoundForest.App/wwwroot/appsettings.local.json
+++ b/soundforest.fe/src/SoundForest.App/wwwroot/appsettings.local.json
@@ -3,9 +3,9 @@
     "Authority": "https://spotiwood.eu.auth0.com",
     "Audience": "spotiwood.api",
     "ClientId": "7kZeYTXnJUXIiCI215bpkZ2p7qBgGCek",
-    "ApiRoot": "https://soundforest.azurewebsites.net"
+    "ApiRoot": "http://localhost:7080"
   },
   "Api": {
-    "BaseUri": "https://soundforest.azurewebsites.net"
+    "BaseUri": "http://localhost:7070"
   }
 }
